dc.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: mymicrosvc
  name: mymicrosvc
  namespace: myproject
spec:
  replicas: 1
  selector:
    app: mymicrosvc
    deploymentconfig: mymicrosvc
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: mymicrosvc
        deploymentconfig: mymicrosvc
    spec:		  
      containers:
        - env:
            - name: myvalue
              valueFrom:
               configMapKeyRef:
                key: myvalue
                name: my-config
          image: >-
            172.30.1.1:5000/myproject/mymicrosvc:v1	  
          imagePullPolicy: Always
          name: mymicrosvc
          ports:
            - containerPort: 5555
              protocol: TCP
          resources: 
            limits:
              cpu: '1'
              memory: 768Mi
            requests:
              cpu: '1'
              memory: 768Mi		
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
          - mymicrosvc
        from:
          kind: ImageStreamTag
          name: 'mymicrosvc:v1'
          namespace: myproject
      type: ImageChange
